--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <!-- google fonts -->
     <!-- site style -->
-    <link href="assets/scss/outline.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/css/outline.css" media="all" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
